fixed overflow-x on mobile load

--- a/output.css
+++ b/output.css
@@ -654,6 +654,11 @@ video {
   height: 100vh;
 }
 
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .max-h-\[404px\] {
   max-height: 404px;
 }
@@ -670,6 +675,15 @@ video {
   min-height: 50px;
 }
 
+.min-h-fit {
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
@@ -682,20 +696,8 @@ video {
   width: 100%;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
-}
-
-.w-11\/12 {
-  width: 91.666667%;
+.w-screen {
+  width: 100vw;
 }
 
 .min-w-6 {
@@ -774,6 +776,10 @@ video {
   justify-content: space-evenly;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -841,12 +847,6 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-orange-400 {
-  --tw-gradient-from: #fb923c var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(251 146 60 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .via-indigo-900 {
   --tw-gradient-to: rgb(49 46 129 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #312e81 var(--tw-gradient-via-position), var(--tw-gradient-to);
@@ -855,11 +855,6 @@ video {
 .via-purple-300 {
   --tw-gradient-to: rgb(216 180 254 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #d8b4fe var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.via-orange-300 {
-  --tw-gradient-to: rgb(253 186 116 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #fdba74 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .via-10\% {
@@ -874,12 +869,12 @@ video {
   --tw-gradient-to: #581c87 var(--tw-gradient-to-position);
 }
 
-.to-red-300 {
-  --tw-gradient-to: #fca5a5 var(--tw-gradient-to-position);
-}
-
 .to-100\% {
   --tw-gradient-to-position: 100%;
+}
+
+.bg-contain {
+  background-size: contain;
 }
 
 .bg-fixed {
@@ -1220,6 +1215,12 @@ video {
   }
 }
 
+@media (min-width: 1024px) {
+  .lg\:pl-12 {
+    padding-left: 3rem;
+  }
+}
+
 @media (min-width: 1280px) {
   .xl\:text-left {
     text-align: left;
@@ -1273,24 +1274,17 @@ video {
 }
 
 @media (min-width: 1800px) {
-  .min-\[1800px\]\:ml-\[25\%\] {
-    margin-left: 25%;
-  }
-
-  .min-\[1800px\]\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .min-\[1800px\]\:w-\[66\%\] {
-    width: 66%;
-  }
-
-  .min-\[1800px\]\:w-1\/2 {
-    width: 50%;
+  .min-\[1800px\]\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .min-\[1800px\]\:w-2\/3 {
     width: 66.666667%;
+  }
+
+  .min-\[1800px\]\:w-\[66\%\] {
+    width: 66%;
   }
 
   .min-\[1800px\]\:pt-16 {
